--- a/assets/css/menu/menu.css
+++ b/assets/css/menu/menu.css
@@ -114,6 +114,10 @@ header {
     line-height: 26px; 
     padding-bottom: 2.8rem;
 }
+.breakfast__img-order-link a:hover{
+    color: rgba(251, 143, 44, 0.80);
+    transition: linear 0.3s;
+}
 .breakfast__img-order-link a{
     font-family: Plus Jakarta Sans;
     font-size: 16px;
@@ -121,7 +125,7 @@ header {
     font-weight: 400;
     line-height: 26px;
     color: white;
-    border-bottom: 1px solid #FFF;;
+    border-bottom:1px solid rgba(251, 143, 44, 0.80);
     padding-bottom: 7px;
 }
 .breakfast__img-order {
@@ -225,6 +229,10 @@ img.owl-next,img.owl-prev {
     background-color: rgba(251, 143, 44, 0.80);
     padding: 10px 18px;
     border-radius: 10px;
+}
+.Banner__desc a:hover{
+    background-color:rgba(255, 115, 0, 0.918) ;
+    transition: linear 0.3s;
 }
 
 /* padding between */
